# AMTR2

./: README.md  config.yaml
amtr2_pico/: CMakeLists.txt
amtr2_pico/include/: amtr2_communicator.h  i2c_communicator.h  pico_w_client.h  pico_w_interface.h
amtr2_pico/src/: amtr2_communicator.c  i2c_communicator.c  main_client.c  main_server.c  pico_w_client.c  pico_w_interface.c
